2014-08-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.cpp:
	* NamedNode.cpp:
	* ImportedNode.cpp:
	* ExportedNode.cpp:
	* X3DExecutionContext.cpp: 

2014-08-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.h:
	* X3DScene.h:
	* X3DBaseNode.cpp:
	* Loader.cpp:
	* X3DBrowserContext.h:
	* ProtoDeclaration.h:
	* AudioClip.h:
	* Inline.h:
	* AudioClip.cpp:
	* X3DExecutionContext.h:
	* Inline.cpp:
	* Context.h:
	* X3DExecutionContext.cpp:
	* ExternProtoDeclaration.h:
	* jsContext.h:
	* Context.cpp:
	* MovieTexture.h:
	* ExternProtoDeclaration.cpp:
	* X3DScriptNode.h:
	* jsContext.cpp:
	* MovieTexture.cpp:
	* X3DTimeDependentNode.h:
	* X3DPrototypeInstance.h:
	* X3DPrototypeInstance.cpp:
	* X3DTimeDependentNode.cpp:
	* ParticleSystem.h:
	* ParticleSystem.cpp:
	* ProximitySensor.h:
	* VisibilitySensor.h:
	* ProximitySensor.cpp:
	* VisibilitySensor.cpp:
	* X3DKeyDeviceSensorNode.h:
	* X3DKeyDeviceSensorNode.cpp:
	* X3DPointingDeviceSensorNode.h:
	* X3DPointingDeviceSensorNode.cpp: 

2014-08-15  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUrlObject.h:
	* X3DUrlObject.cpp:
	* Background.h:
	* Background.cpp: 

2014-08-15  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Struct.h:
	* X3DBaseNode.h:
	* X3DScene.h:
	* X3DBaseNode.cpp:
	* X3DArrayField.h:
	* X3DScene.cpp:
	* X3DBaseTool.h:
	* X3DFieldDefinition.h:
	* ProtoDeclaration.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp:
	* ExternProtoDeclaration.cpp:
	* X3DPrototypeInstance.cpp: 

2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* X3DParentObject.h:
	* X3DScene.cpp:
	* X3DBaseTool.h:
	* X3DExecutionContext.cpp: 

2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DScene.h:
	* X3DScene.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp: 

2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DPtr.h:
	* X3DBaseNode.h:
	* X3DArrayField.h:
	* X3DBaseNode.cpp:
	* X3DBaseTool.h: 
