@@ -90,6 +90,8 @@ NamedNode::initialize ()
 
 	node .addInterest (this, &NamedNode::set_node);
 
+	disposed () .addInterest (node, &X3DField <X3DBaseNode*>::setValue, nullptr);
+
 	set_node ();
 }
 
